<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9F1"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="70dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/registrate_inicia_sesi_n_o_contin_a_como_invitado"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="6dp">

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="miguel94"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="6dp">

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/jmiguel94_gmail_com"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="6dp">

            <EditText
                android:id="@+id/userPswwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textPassword"
                android:hint="@string/contrase_a123"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="6dp">

            <EditText
                android:id="@+id/userPswwdConfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:backgroundTint="@android:color/transparent"
                android:inputType="textPassword"
                android:hint="@string/contrase_a123"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/mOrange1buttons"
            android:text="@string/registro"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/sOrange1Login"
                android:onClick="goToLogin"
                android:text="@string/iniciar"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/sOrange2ContinueSign"
                android:onClick="goToFilter"
                android:text="@string/continuar"
                android:textColor="#4A4459"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>